--- a/register.html
+++ b/register.html
@@ -13,10 +13,11 @@
 
     <link rel="stylesheet" href="./css/loginReg.css" />
     <script src="./js/script.js" defer></script>
-
+    
     <title>Register | E-BIBLIBAY</title>
   </head>
   <body>
+    <script src="./js/auth.js"></script>
     <div class="container">
       <div class="row">
         <div class="mx-auto mt-2 text-center mt-3">
@@ -37,7 +38,8 @@
             <div class="card-body">
               <h4>Sign Up</h4>
               <p class="text-muted">Sign Up for the Best Book!</p>
-              <form action="" class="mt-4" method="post">
+              <form action="javascript:void(0)" class="mt-4" id="registerForm">
+
                 <div class="form-group">
                   <input
                     type="text"
