--- a/login.html
+++ b/login.html
@@ -13,10 +13,11 @@
     <link rel="stylesheet" href="./css/loginReg.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="./js/script.js" defer></script>
-
+    
     <title>Login | E-BIBLIBAY</title>
   </head>
   <body>
+    <script src="./js/auth.js"></script>
     <div class="container">
       <div class="row">
         <div class="mx-auto mt-3 text-center">
@@ -38,7 +39,7 @@
             <div class="card-body">
               <h4>Sign In</h4>
               <p class="text-muted">Get the Best Book Here!</p>
-              <form action="" class="mt-4" method="post">
+              <form action="javascript:void(0)" class="mt-4" id="loginForm">
                 <div class="form-group">
                   <input
                     type="text"
