--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           </div>
           <div class="content">
             <h3> অপেক্ষা</h3>
-            <div class="price">BDT 125.000 <span>BDT 150.000</span></div>
+            <div class="price">BDT 250.00 <span>BDT 290.00</span></div>
             <a href="#popular" class="btn">Add To Cart</a>
           </div>
         </div>
@@ -164,7 +164,7 @@
           </div>
           <div class="content">
             <h3> কোথাও কেউ নেই</h3>
-            <div class="price">BDT 125.000 <span>BDT 150.000</span></div>
+            <div class="price">BDT 250.00 <span>BDT 300.00</span></div>
             <a href="#popular" class="btn">Add To Cart</a>
           </div>
         </div>
@@ -180,7 +180,7 @@
           </div>
           <div class="content">
             <h3> প্রথম আলো</h3>
-            <div class="price">BDT 125.000 <span>BDT 150.000</span></div>
+            <div class="price">BDT 2000.00 <span>BDT 2300.00</span></div>
             <a href="#popular" class="btn">Add To Cart</a>
           </div>
         </div>
@@ -196,7 +196,7 @@
           </div>
           <div class="content">
             <h3> জোছনা ও জননীর গল্প </h3>
-            <div class="price">BDT 125.000 <span>BDT 150.000</span></div>
+            <div class="price">BDT 600.00 <span>BDT 680.00</span></div>
             <a href="#popular" class="btn">Add To Cart</a>
           </div>
         </div>
@@ -212,7 +212,7 @@
           </div>
           <div class="content">
             <h3> Harry Potter</h3>
-            <div class="price">BDT 125.000 <span>BDT 150.000</span></div>
+            <div class="price">BDT 1020.00 <span>BDT 1100.00</span></div>
             <a href="#popular" class="btn">Add To Cart</a>
           </div>
         </div>
@@ -228,7 +228,7 @@
           </div>
           <div class="content">
             <h3> A Tale Of Two Cities</h3>
-            <div class="price">BDT 125.000 <span>BDT 150.000</span></div>
+            <div class="price">BDT 660.00 <span>BDT 725.00</span></div>
             <a href="#popular" class="btn">Add To Cart</a>
           </div>
         </div>
@@ -244,7 +244,7 @@
           </div>
           <div class="content">
             <h3>Crime and Punishment</h3>
-            <div class="price">BDT 125.000 <span>BDT 150.000</span></div>
+            <div class="price">BDT 800.00 <span>BDT 930.00</span></div>
             <a href="#popular" class="btn">Add To Cart</a>
           </div>
         </div>
@@ -260,7 +260,7 @@
           </div>
           <div class="content">
             <h3> Pride and Prejudice</h3>
-            <div class="price">BDT 125.000 <span>BDT 150.000</span></div>
+            <div class="price">BDT 800.00 <span>BDT 850.00</span></div>
             <a href="#popular" class="btn">Add To Cart</a>
           </div>
         </div>
@@ -276,7 +276,7 @@
           </div>
           <div class="content">
             <h3> White Nights</h3>
-            <div class="price">BDT 125.000 <span>BDT 150.000</span></div>
+            <div class="price">BDT 300.00 <span>BDT 350.00</span></div>
             <a href="#popular" class="btn">Add To Cart</a>
           </div>
         </div>
@@ -292,7 +292,7 @@
           </div>
           <div class="content">
             <h3>সংশপ্তক</h3>
-            <div class="price">BDT 125.000 <span>BDT 150.000</span></div>
+            <div class="price">BDT 290.00 <span>BDT 350.00</span></div>
             <a href="#popular" class="btn">Add To Cart</a>
           </div>
         </div>
@@ -352,7 +352,7 @@
           </div>
           <div class="content">
             <h3>The Diary of a Young Girl</h3>
-            <div class="price">BDT 175.000 <span>BDT 190.000</span></div>
+            <div class="price">BDT 350.00 <span>BDT 390.00</span></div>
             <div class="stars">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -369,7 +369,7 @@
           </div>
           <div class="content">
             <h3> Man's Search for Meaning </h3>
-            <div class="price">BDT 225.000 <span>BDT 250.000</span></div>
+            <div class="price">BDT 700.00 <span>BDT 775.00</span></div>
             <div class="stars">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -386,7 +386,7 @@
           </div>
           <div class="content">
             <h3> 1984 </h3>
-            <div class="price">BDT 125.000 <span>BDT 150.000</span></div>
+            <div class="price">BDT 900.00 <span>BDT 1000.00</span></div>
             <div class="stars">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -403,7 +403,7 @@
           </div>
           <div class="content">
             <h3> Where the Crawdads Sing</h3>
-            <div class="price">BDT 155.000 <span>BDT 190.000</span></div>
+            <div class="price">BDT 330.00 <span>BDT 400.00</span></div>
             <div class="stars">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -420,7 +420,7 @@
           </div>
           <div class="content">
             <h3>Nothing Lasts Forever</h3>
-            <div class="price">BDT 175.000 <span>BDT 200.000</span></div>
+            <div class="price">BDT 875.00 <span>BDT 950.00</span></div>
             <div class="stars">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -443,7 +443,7 @@
           </div>
           <div class="content">
             <h3>Dreams From My Father</h3>
-            <div class="price">BDT 75.000 <span>BDT 90.000</span></div>
+            <div class="price">BDT 1015.00 <span>BDT 1200.00</span></div>
             <div class="stars">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -460,7 +460,7 @@
           </div>
           <div class="content">
             <h3> The Brothers Karamazov</h3>
-            <div class="price">BDT 275.000 <span>BDT 290.000</span></div>
+            <div class="price">BDT 930.00 <span>BDT 1000.00</span></div>
             <div class="stars">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -477,7 +477,7 @@
           </div>
           <div class="content">
             <h3>The Da Vinci Code</h3>
-            <div class="price">BDT 75.000 <span>BDT 90.000</span></div>
+            <div class="price">BDT 920.00 <span>BDT 1050.00</span></div>
             <div class="stars">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -494,7 +494,7 @@
           </div>
           <div class="content">
             <h3>Angels & Demons</h3>
-            <div class="price">BDT 75.000 <span>BDT 90.000</span></div>
+            <div class="price">BDT 900.00 <span>BDT 1020.00</span></div>
             <div class="stars">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -511,7 +511,7 @@
           </div>
           <div class="content">
             <h3>The Idiot</h3>
-            <div class="price">BDT 75.000 <span>BDT 90.000</span></div>
+            <div class="price">BDT 750.00 <span>BDT 820.00</span></div>
             <div class="stars">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -606,7 +606,7 @@
           </p>
           <div class="content">
             <div class="info">
-              <div class="name">Armin</div>
+              <div class="name">Ashik</div>
               <div class="job">Freelancer</div>
               <div class="stars">
                 <i class="fas fa-star"></i>
@@ -680,7 +680,7 @@
           <div class="content">
             <h3>Exploring Biblibay's Rare Book Collection</h3>
             <p>
-              From antique editions to limited prints, explore the rare treasures at Biblibay’s Chittagong store.
+              From antique editions to limited prints, explore the rare treasures at Biblibay’s Chattogram store.
             </p>
             <a href="./404Error.html" class="btn">read more</a>
             <div class="icons">
@@ -805,7 +805,7 @@
           <div class="content">
             <h3>Top 5 Must-Read Books This Month</h3>
             <p>
-              Discover the latest releases and timeless classics available at Biblibay in Chittagong.
+              Discover the latest releases and timeless classics available at Biblibay in Chattogram.
               Our curated selection is perfect for every book lover.
             </p>
             <a href="./404Error.html" class="btn">read more</a>
@@ -828,7 +828,7 @@
         <h2>About us</h2>
         <div class="content">
           <p>
-            BiblioBay is a premier bookstore and online marketplace based in Chittagong, Bangladesh, committed to connecting readers with a rich and diverse collection of books — from timeless classics to the latest bestsellers, in both print and digital formats.
+            BiblioBay is a premier bookstore and online marketplace based in Chattogram, Bangladesh, committed to connecting readers with a rich and diverse collection of books — from timeless classics to the latest bestsellers, in both print and digital formats.
           </p>
           <br />
           <p>
@@ -847,7 +847,7 @@
         <div class="content">
           <div class="place">
             <span class="fas fa-map-marker-alt"></span>
-            <span class="text">Chittagong, Bangladesh</span>
+            <span class="text">Chattogram, Bangladesh</span>
           </div>
           <div class="phone">
             <span class="fas fa-phone-alt"></span>
