--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -267,7 +267,7 @@
       </div>
       <div>
         <span class="me-3">Welcome, Admin</span>
-        <a href="./index.html" class="btn btn-sm btn-outline-secondary">
+        <a href="/index.html" class="btn btn-sm btn-outline-secondary">
           <i class="fas fa-external-link-alt"></i> View Site
         </a>
       </div>
